<resources>
    <string name="app_name" translatable="false">Money</string>

    <string name="about">О приложении</string>
    <string name="about_app_title">Трекер финансов</string>
    <string name="future_module_settings">В скором времени здесь появится модуль настроек</string>
    <string name="my_accounts">Мои счета</string>
    <string name="no_accounts">Нет счетов</string>
    <string name="settings">Настройки</string>
    <string name="tracker">Трекер</string>
    <string name="create">Создать</string>
    <string name="cancel">Отменить</string>
    <string name="open_new_account">Открытие нового счета</string>
    <string name="title">Название</string>
    <string name="initial_amount">Начальная сумма</string>
    <string name="currency">Валюта</string>
    <string name="error_empty_title">Введите название</string>
    <string name="empty_operations_list">Нет операций</string>
    <string name="add">Добавить</string>
    <string name="sum">Сумма</string>
    <string name="finance_operation">Финансовая операция</string>
    <string name="error_empty_amount">Введите сумму</string>
    <string name="income">Доход</string>
    <string name="expense">Расход</string>
    <string name="category">Категория</string>
    <string name="category_salary">Зарплата</string>
    <string name="category_gift">Подарок</string>
    <string name="category_other">Другая</string>
    <string name="category_transport">Транспорт</string>
    <string name="category_products">Продукты</string>
    <string name="category_health">Здоровье</string>
    <string name="category_education">Образование</string>
    <string name="rename">Переименовать</string>
    <string name="ok">Ок</string>
    <string name="finance_history">История операций</string>

</resources>