<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="6dp"
    app:cardElevation="0dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:letterSpacing="0.02"
            android:text="@string/rename"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/title"
            style="@style/TextInputLayout"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialogTitle">

            <EditText
                android:id="@+id/inputTitle"
                style="@style/TextInputLayoutEditText"
                android:hint="@string/title"
                android:inputType="text"
                android:maxLines="3" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/add"
            style="@style/DialogButton"
            android:layout_marginTop="20dp"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/cancel"
            style="@style/DialogButton"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@id/add"
            app:layout_constraintTop_toTopOf="@id/add" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
